# anomapay-erc20-forwarder

./: .dockerignore  .editorconfig  .env-example  .gitignore  .gitmodules  CONTEXT.md  Cargo.toml  Dockerfile  Dockerfile.webserver  INCIDENT_RESPONSE_PLAN.md  README.md  RELEASE_CHECKLIST.md  deployments.json  docker-compose.yml  justfile  openapi.json  taplo.toml
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: bindings.yml  ci.yml  contracts.yml  crates.yml  docker.yml  rust.yml  rust_test.yml
benchmark/: README.md  data.csv  non_aggregate.csv  plot.gp  run.sh
bindings/: Cargo.toml  README.md  deployments.json
bindings/src/: addresses.rs  contract.rs  lib.rs
bindings/tests/: contract.rs  deployments.rs
contracts/: .env-example  Cargo.toml  README.md  build.rs  foundry.toml  slither.config.json
contracts/script/: DeployERC20Forwarder.s.sol  DeployERC20ForwarderProxy.s.sol  DeployERC20ForwarderV2.s.sol  DeployGenericCallForwarder.s.sol  UpgradeERC20ForwarderProxy.s.sol
contracts/src/: ERC20Forwarder.sol  ERC20ForwarderPermit2.sol  GenericCallForwarder.sol
contracts/test/: ERC20Forwarder.e2e.t.sol  ERC20Forwarder.t.sol  ERC20Forwarder.upgrade.t.sol  ERC20ForwarderV2.t.sol  ERC20ForwarderV3.t.sol  GenericCallForwarder.t.sol  Permit2.t.sol  TransientCallbackHandler.t.sol  TransientFallbackHandler.t.sol  TransientFallbackManager.t.sol
crates/bindings/: Cargo.toml  README.md  deployments.json
crates/integration-test/: Cargo.toml
crates/integration-test/src/: lib.rs  logic.rs
crates/integration-test/src/deploy/: forwarder.rs  mod.rs  permit2.rs
crates/integration-test/src/deploy/erc20/: example_erc20_bindings.rs  ierc20_bindings.rs  mod.rs  weth_bindings.rs
crates/integration-test/src/fixtures/: mod.rs  resource.rs
crates/integration-test/src/fixtures/transfer/: action.rs  mod.rs  resource.rs
crates/integration-test/src/fixtures/unwrap/: action.rs  mod.rs  resource.rs
crates/integration-test/src/fixtures/wrap/: action.rs  mod.rs  resource.rs
crates/integration-test/src/state/: mod.rs
crates/integration-test/src/state/erc20/: addresses.rs
crates/integration-test/src/state/forwarder/: addresses.rs
crates/integration-test/tests/: anomapay_erc20.rs
crates/integration-test/tests/common/: mod.rs
example_transactions/: Cargo.toml  main.rs
example_transactions/src/: erc20_forwarder.rs
patches/: arm+0.11.0.patch  arm+0.8.1.patch
simple_transfer/transfer_app/: Cargo.toml  build.rs
simple_transfer/transfer_app/src/: balances.rs  errors.rs  ethereum.rs  helpers.rs  indexer.rs  main.rs  rpc.rs  user.rs  webserver.rs
simple_transfer/transfer_app/src/evm/: approve.rs  errors.rs  evm_calls.rs  indexer.rs  mod.rs
simple_transfer/transfer_app/src/examples/: mint.rs  mod.rs  shared.rs
simple_transfer/transfer_app/src/examples/end_to_end/: burn.rs  generalized_transfer.rs  mint.rs  mod.rs  split.rs  transfer.rs
simple_transfer/transfer_app/src/request/: compliance_proof.rs  logic_proof.rs  mod.rs  parameters.rs  resources.rs
simple_transfer/transfer_app/src/request/balances/: balances.rs  call_balances_api.rs  mod.rs
simple_transfer/transfer_app/src/request/fee_estimation/: estimation.rs  mod.rs  token.rs
simple_transfer/transfer_app/src/request/fee_estimation/price/: gas.rs  mod.rs  token.rs
simple_transfer/transfer_app/src/request/helpers/: mod.rs  price_helper.rs
simple_transfer/transfer_app/src/request/prices/: call_prices_api.rs  mod.rs
simple_transfer/transfer_app/src/request/proving/: aggregation_proof.rs  compliance_proof.rs  logic_proof.rs  mod.rs  parameters.rs  resources.rs
simple_transfer/transfer_app/src/request/proving/witness_data/: mod.rs  token_transfer.rs  trivial.rs
simple_transfer/transfer_app/src/request/queue/: stats.rs
simple_transfer/transfer_app/src/request/witness_data/: mod.rs  token_transfer.rs  trivial.rs
simple_transfer/transfer_app/src/requests/: approve.rs  balances.rs  burn.rs  mint.rs  mod.rs  resource.rs  split.rs  transfer.rs
simple_transfer/transfer_app/src/tests/: approve.rs  benchmark.rs  end_to_end.rs  fixtures.rs  helpers.rs  mod.rs  permit2.rs  serializer.rs
simple_transfer/transfer_app/src/tests/evm/: approve.rs  mod.rs
simple_transfer/transfer_app/src/tests/request/: balances.rs  burn.rs  mint.rs  mod.rs  prices.rs  split.rs  transfer.rs
simple_transfer/transfer_app/src/tests/request/fee_estimation/: estimation.rs  mod.rs
simple_transfer/transfer_app/src/tests/request/fee_estimation/price/: gas.rs  mod.rs  token.rs
simple_transfer/transfer_app/src/tests/request/proving/: burn.rs  mint.rs  mod.rs  split.rs  transfer.rs
simple_transfer/transfer_app/src/tests/transactions/: burn.rs  mint.rs  split.rs  transfer.rs
simple_transfer/transfer_app/src/tests/webserver/: balances.rs  burn.rs  mint.rs  mod.rs  split.rs  transfer.rs
simple_transfer/transfer_app/src/transactions/: burn.rs  helpers.rs  mint.rs  mod.rs  split.rs  transfer.rs
simple_transfer/transfer_app/src/web/: handlers.rs  mod.rs  serializer.rs  webserver.rs
simple_transfer/transfer_circuit/: Cargo.toml  README.md
simple_transfer/transfer_circuit/methods/: Cargo.toml
simple_transfer/transfer_circuit/methods/guest/: Cargo.toml
simple_transfer/transfer_circuit/methods/guest/src/: main.rs
simple_transfer/transfer_circuit/src/: lib.rs  test.rs
simple_transfer/transfer_circuit_v2/: Cargo.toml  README.md
simple_transfer/transfer_circuit_v2/methods/: Cargo.toml
simple_transfer/transfer_circuit_v2/methods/guest/: Cargo.toml
simple_transfer/transfer_circuit_v2/methods/guest/src/: main.rs
simple_transfer/transfer_circuit_v2/src/: lib.rs  test.rs
simple_transfer/transfer_library/: Cargo.toml
simple_transfer/transfer_library/src/: lib.rs
simple_transfer/transfer_library_v2/: Cargo.toml
simple_transfer/transfer_library_v2/src/: lib.rs  migrate_tx.rs
simple_transfer/transfer_witness/: Cargo.toml
simple_transfer/transfer_witness/src/: call_type.rs  lib.rs
simple_transfer/transfer_witness_v2/: Cargo.toml
simple_transfer/transfer_witness_v2/src/: call_type_v2.rs  lib.rs
(+31 files in other folders)
