[workspace]
resolver = "3"
members = ["bindings"]

[workspace.package]
keywords = ["anoma", "evm", "protocol-adapter", "erc20", "forwarder"]
authors = ["Anoma Foundation"]
license = "MIT"
repository = "https://github.com/anoma/anomapay-erc20-forwarder"
homepage = "https://anomapay.app/"
edition = "2024"

[workspace.dependencies]
alloy = { version = "1.8.3", features = ["full", "eip712", "node-bindings"] }
alloy-chains = "0.2.33"
anoma-pa-evm-bindings = "3.0.0-rc.0"
dotenvy = { version = "0.15.7" }
serde = { version = "1.0.228", default-features = false }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.51", features = ["rt-multi-thread"] }

anomapay-erc20-forwarder-bindings = { path = "bindings" }
