[workspace]
resolver = "3"
members = ["crates/bindings", "crates/integration-test"]

[workspace.package]
keywords = ["anoma", "evm", "protocol-adapter", "erc20", "forwarder"]
authors = ["Anoma Foundation"]
license = "MIT"
repository = "https://github.com/anoma/anomapay-erc20-forwarder"
homepage = "https://anomapay.app/"
edition = "2024"

[workspace.dependencies]
alloy = { version = "2.0.5", features = ["full", "eip712", "node-bindings"] }
alloy-chains = "0.2.33"
anoma-pa-evm-bindings = "3.0.0-rc.1"
anoma-rm-risc0 = { version = "1.1.1", default-features = false }
anoma-rm-risc0-gadgets = "1.1.1"
anyhow = "1.0"
bincode = "1.3.3"
dotenvy = "0.15.7"
regex = "1.12.3"
risc0-zkvm = "3.0.3"
rstest = "0.26.1"
serde = { version = "1.0.228", default-features = false }
serde_json = "1.0"
thiserror = "2.0.18"
transfer_library = "2.0.0"
transfer_witness = "2.0.0"
tokio = { version = "1.52", features = ["rt-multi-thread"] }

# Forwarder bindings + consolidated integration-test crate (this repo)
anomapay-erc20-forwarder-bindings = { path = "crates/bindings" }
anomapay-erc20-forwarder-integration-test = { path = "crates/integration-test" }

# Upstream test crates, pinned by git rev (see anoma-pa-testkit ADR-0002). For
# cross-repo development, override locally with a `[patch]` to a path checkout.
anoma-pa-testkit = { git = "https://github.com/anoma/pa-testkit", rev = "74cf6ad7cd488021128c34662e68171c7ae28e6d" }
anoma-pa-evm-integration-test = { git = "https://github.com/anoma/pa-evm", rev = "95179723a8515337a90276d47374237c3e5a7784" }
