[workspace]
resolver = "3"
members = ["bindings"]

[workspace.package]
keywords = ["anoma", "evm", "protocol-adapter", "erc20", "forwarder"]
authors = ["Anoma Foundation"]
license = "MIT"
repository = "https://github.com/anoma/anomapay-erc20-forwarder"
homepage = "https://anomapay.app/"
edition = "2024"

[workspace.dependencies]
alloy = { version = "2.0.5", features = ["full", "eip712", "node-bindings"] }
alloy-chains = "0.2.33"
anoma-pa-evm-bindings = "3.0.0-rc.1"
dotenvy = "0.15.7"
serde = { version = "1.0.228", default-features = false }
serde_json = "1.0"
thiserror = "2.0.18"
transfer_library = "2.0.0"
tokio = { version = "1.52", features = ["rt-multi-thread"] }

anomapay-erc20-forwarder-bindings = { path = "bindings" }
