[package]
name = "erc20_forwarder_bindings"
version = "1.0.0-rc.6"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
evm_protocol_adapter_bindings = { workspace = true }
alloy = { workspace = true, features = ["eip712", "node-bindings"] }
alloy-chains = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
dotenv = { workspace = true, features = ["cli"] }

[dev-dependencies]
transfer_library = { workspace = true }
