[package]
name = "anomapay-erc20-forwarder-bindings"
version = "1.0.0-rc.6"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
alloy = { workspace = true, features = ["eip712", "node-bindings"] }
alloy-chains = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
anoma-pa-evm-bindings = { workspace = true }
tokio = { workspace = true }
