[package]
name = "anomapay-erc20-forwarder-bindings"
version = "1.0.1"
description = "The AnomaPay ERC20 forwarder contract bindings and deployments."
keywords.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true, features = ["eip712", "node-bindings"] }
alloy-chains = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
anoma-pa-evm-bindings = { workspace = true }
tokio = { workspace = true }
