[package]
name = "example_transactions"
version = "1.0.0-rc.2"
edition = "2024"

[lib]
name = "example_transactions_lib"
path = "src/lib.rs"

[[bin]]
name = "example_transactions_main"
path = "main.rs"

[dependencies]
arm_risc0 = { git = "https://github.com/anoma/arm-risc0.git", tag = "v0.8.1", package = "arm", features = [
    "groth16_prover",
    "bonsai"
] }
evm-protocol-adapter-bindings = { git = "https://github.com/anoma/evm-protocol-adapter.git", rev = "d1d0e83ce413df0ca87d63e019332b2628b982e0", package = "evm_protocol_adapter_bindings" }
simple-transfer-app = { git = "https://github.com/anoma/arm-risc0.git", tag = "v0.8.1", package = "simple-transfer-app" }

alloy = { version = "1.0.30", features = ["full", "eip712", "node-bindings"] }
tokio = { version = "1.44", features = ["rt-multi-thread"] }
sha2 = { version = "0.10.9" }


