[package]
name = "anomapay-erc20-forwarder-integration-test"
description = "Integration and e2e tests for the AnomaPay ERC20 forwarder."
version = "0.2.0"
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
edition.workspace = true
publish = false

[features]
default = []
e2e = ["anoma-pa-evm-integration-test/e2e"]

[dependencies]
anoma-pa-testkit = { workspace = true, features = ["fixtures"] }
anoma-pa-evm-integration-test = { workspace = true }
anomapay-erc20-forwarder-bindings = { workspace = true }

alloy = { workspace = true, features = [
  "contract",
  "eip712",
  "json",
  "node-bindings",
  "providers",
  "rpc-types",
  "signer-local",
  "sol-types",
] }
alloy-chains = { workspace = true }
anoma-rm-risc0 = { workspace = true, features = ["compliance_circuit"] }
anoma-rm-risc0-gadgets = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
risc0-zkvm = { workspace = true }
transfer_library = { workspace = true }
transfer_witness = { workspace = true }

[dev-dependencies]
anoma-pa-testkit = { workspace = true, features = ["mocks"] }
regex = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true }
