[package]
name = "transfer_app"
version = "0.1.0"
edition = "2021"

[lints.rust]
missing_docs = "warn"

[features]
default = ["arm/bonsai"]
gpu = ["arm/cuda"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["hex"] }
transfer_library = { path = "../transfer_library" }
arm = { git = "https://github.com/anoma/arm-risc0", tag = "v0.8.1", default-features = false, features = ["transaction",
    "groth16_prover",
] }
rand = "0.8"
evm_protocol_adapter_bindings = { git = "https://github.com/anoma/evm-protocol-adapter", branch = "main" }
tokio = "1.47.1"
alloy = { version = "1.0.23", features = ["full"] }
k256 = { version = "0.13", features = ["serde"] }
dotenv = "0.15"
bincode = "1.3.3"

futures = { version = "0.3.31", features = ["thread-pool"] }
rocket = { version = "0.5", features = ["json"] }
reqwest = { version = "0.12", features = ["blocking"] }
log = "0.4.28"

[dev-dependencies]
serial_test = "3.2.0"