[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "transfer_app"
readme.workspace = true
version.workspace = true

[lints.rust]
missing_docs = "warn"

[lints.clippy]
enum_variant_names = "allow"
[features]
default = ["arm/bonsai"]
gpu = ["arm/cuda"]

[dependencies]
alloy = { workspace = true }
arm = { workspace = true, features = ["transaction"] }
arm-gadgets = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
enum_dispatch = { workspace = true }
evm_protocol_adapter_bindings = { workspace = true }
futures = { workspace = true, features = ["thread-pool"] }
itertools = { workspace = true }
k256 = { workspace = true, features = ["serde"] }
log = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
risc0-zkvm = { workspace = true }
rocket = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
transfer_library = { workspace = true }
transfer_witness = { workspace = true }
typetag = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }
