[package]
name = "simple-transfer"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[workspace]

[dependencies]
arm = { workspace = true }
transfer_witness = { workspace = true }
transfer_library = { workspace = true }
arm-gadgets = { workspace = true }

[dev-dependencies]
bincode = "1.3.3"
