[package]
edition = "2021"
name = "token-transfer"
version = "0.1.0"

[workspace]

[dependencies]
arm = { git = "https://github.com/anoma/arm-risc0", tag = "v0.13.0", default-features = true }
arm-gadgets = { git = "https://github.com/anoma/arm-risc0", tag = "v0.13.0" }
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
  "hash2curve",
], default-features = false }
risc0-zkvm = "3.0.3"
transfer_library = { path = "../transfer_library" }
transfer_witness = { path = "../transfer_witness" }

[dev-dependencies]
bincode = "1.3.3"
