[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "token-transfer-v2"
readme.workspace = true
version.workspace = true

[workspace]

[dependencies]
arm = { workspace = true }
arm-gadgets = { workspace = true }
transfer_library = { workspace = true }
transfer_library_v2 = { workspace = true }
transfer_witness = { workspace = true }
transfer_witness_v2 = { workspace = true }
