[package]
name = "transfer_library"
version = "0.1.0"
edition = "2021"

[dependencies]
arm = { git = "https://github.com/anoma/arm-risc0", tag = "v0.11.0", default-features = true }
transfer_witness = { path = "../transfer_witness" }
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
hex = "0.4"
