[package]
name = "transfer_library"
resolver = "3"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
arm = { workspace = true, features = ["transaction"] }
arm-gadgets = { workspace = true }
transfer_witness = { workspace = true }
serde = { workspace = true, features = ["derive"] }
lazy_static = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true, features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }
