[package]
name = "transfer_library_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
arm = { workspace = true }
arm-gadgets = { workspace = true }
transfer_witness_v2 = { workspace = true }
transfer_witness = { workspace = true }
serde = { workspace = true, features = ["derive"] }
lazy_static = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true, features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"] }
