[package]
name = "transfer_library_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
arm = { git = "https://github.com/anoma/arm-risc0", tag = "v0.13.0", default-features = true }
arm-gadgets = { git = "https://github.com/anoma/arm-risc0", tag = "v0.13.0" }
transfer_witness_v2 = { path = "../transfer_witness_v2" }
transfer_witness = { path = "../transfer_witness" }
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
hex = "0.4"
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }
