[package]
name = "transfer_witness"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
arm = { workspace = true, default-features = false }
arm-gadgets = { workspace = true }
k256 = { workspace = true, features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
  "hash2curve",
], default-features = false }
rand = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
