[package]
name = "transfer_witness_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
arm = { git = "https://github.com/anoma/arm-risc0", tag = "v0.13.0", default-features = false }
arm-gadgets = { git = "https://github.com/anoma/arm-risc0", tag = "v0.13.0" }
transfer_witness = { path = "../transfer_witness" }
rand = "0.8"
alloy-primitives = "1.0.23"
alloy-sol-types = "1.0.23"
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }
bincode = "1.3.3"
lazy_static = "1.5.0"
hex = "0.4"
