[package]
name = "transfer_witness_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
arm = { workspace = true }
arm-gadgets = { workspace = true }
transfer_witness = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
bincode = { workspace = true }
