[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "transfer_witness_v2"
readme.workspace = true
version.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
arm = { workspace = true }
arm-gadgets = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
transfer_witness = { workspace = true }
